# fixe

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c
src/: fixe.c  fixe.h
src/fixe/: complex.c  conversion.c  subfuncs.h  types.h
src/fixe/add/: fixe32_add.c
src/fixe/convert/: fixe16_fromfloat.c  fixe16_tofloat.c  fixe32_fromfloat.c  fixe32_tofloat.c  fixe64_fromfloat.c  fixe64_tofloat.c
tests/: addition.c  conversion.c  tests.h
